# moore-mud

./: .gitignore  CHANGELOG.md  cabal.project  flake.nix  justfile  machines-frp.cabal  mud-design.md
bidir-serializers/: bidir-serializers.cabal
bidir-serializers/src/Data/: Serializer.hs
machines-frp/: CHANGELOG.md
machines-frp/src/Data/Machine/FRP/: Core.hs
moore-mud/: moore-mud.cabal
moore-mud/app/: Main.hs  NavRepl.hs  Server.hs
moore-mud/src/MUD/: Network.hs  Types.hs
moore-mud/src/MUD/Agent/: Player.hs  Repl.hs
moore-mud/src/MUD/Serializer/: Chat.hs  Nav.hs
moore-mud/src/MUD/World/: Chat.hs  Nav.hs
src/Data/Machine/FRP/: Driver.hs  HKD.hs
