cabal-version: 3.0
name:          bidir-serializers
version:       0.1.0.0
synopsis:      Bidirectional text serializers with monoidal-functors instances
license:       MIT
author:        Solomon Bothwell
maintainer:    ssbothwell@gmail.com
category:      Data

common common-settings
  default-language:   Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules
    -Wno-name-shadowing

library
  import:          common-settings
  hs-source-dirs:  src
  exposed-modules:
    Data.Serializer

  build-depends:
    , base                >=4.9 && <5
    , monoidal-functors
    , text
    , these
