cabal-version: 3.0
name:          moore-mud
version:       0.1.0.0
synopsis:      A MUD engine built on coalgebraic Moore machines
license:       MIT
author:        Solomon Bothwell
maintainer:    ssbothwell@gmail.com
category:      Game

--------------------------------------------------------------------------------

common common-settings
  default-language:   Haskell2010
  default-extensions:
    DeriveFunctor
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules
    -Wno-name-shadowing

--------------------------------------------------------------------------------

library
  import:          common-settings
  hs-source-dirs:  src
  exposed-modules:
    MUD.Agent.Player
    MUD.Agent.Repl
    MUD.Network
    MUD.Types
    MUD.World.Chat
    MUD.World.Nav

  build-depends:
    , base           >=4.9 && <5
    , bytestring
    , containers
    , machines-frp
    , network
    , stm
    , text

--------------------------------------------------------------------------------

executable moore-mud-repl
  import:          common-settings
  hs-source-dirs:  app
  main-is:         Main.hs
  build-depends:
    , base       >=4.9 && <5
    , moore-mud
    , machines-frp

--------------------------------------------------------------------------------

executable moore-mud-server
  import:          common-settings
  hs-source-dirs:  app
  main-is:         Server.hs
  ghc-options:     -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base       >=4.9 && <5
    , moore-mud
    , machines-frp
